<resources>

    <!-- Nome do aplicativo -->
    <string name="app_name">Librum</string>

    <!-- Títulos das telas -->
    <string name="title_home">Página Inicial</string>
    <string name="title_favorites">Favoritos</string>
    <string name="title_book_details">Detalhes</string>

    <!-- Mensagens dos diálogos -->
    <string name="dialog_message_delete_item">Tem certeza de que deseja excluir este item?</string>
    <string name="dialog_positive_button_yes">Sim</string>
    <string name="dialog_negative_button_no">Não</string>

    <!-- Mensagens de sucesso e erro -->
    <string name="msg_removed_successfully">Item removido com sucesso!</string>
    <string name="msg_no_books">Nenhum livro encontrado nos seus favoritos!</string>

    <!-- Botões e descrições -->
    <string name="button_remove_book">Remover livro</string>
    <string name="desc_book_image">Imagem de livros</string>
    <string name="desc_back">Imagem de livros</string>
    <string name="desc_favorite">Favoritar / Desfavoritar</string>

    <!-- Botão flutuante -->
    <string name="add_book">Adicionar Livro</string>

    <!-- Form de cadastro de livro -->
    <string name="add_book_title_hint">Título</string>
    <string name="add_book_author_hint">Autor</string>
    <string name="add_book_genre_hint">Gênero</string>
    <string name="add_book_favorite">Favorito</string>
    <string name="add_book_save">Salvar</string>
    <string name="book_saved_success">Livro salvo com sucesso!</string>

    <string name="language">Idioma</string>
    <string name="theme">Tema</string>
    <string name="portuguese">Português</string>
    <string name="english">Inglês</string>
    <string name="night_mode_on">Modo noturno ativado</string>
    <string name="night_mode_off">Modo diurno ativado</string>
    <string name="select_language">Selecionar idioma</string>

    <string name="is_favorite_book">Livro favorito?</string>
    <string name="error_update_book">Erro ao atualizar o livro</string>

</resources>