<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <EditText
        android:id="@+id/edittext_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/add_book_title_hint"
        android:inputType="textCapWords"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/edittext_author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/add_book_author_hint"
        android:inputType="textCapWords"
        app:layout_constraintTop_toBottomOf="@id/edittext_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/edittext_genre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/add_book_genre_hint"
        android:inputType="textCapWords"
        app:layout_constraintTop_toBottomOf="@id/edittext_author"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <CheckBox
        android:id="@+id/checkbox_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_book_favorite"
        app:layout_constraintTop_toBottomOf="@id/edittext_genre"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"/>

    <Button
        android:id="@+id/button_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_book_save"
        app:layout_constraintTop_toBottomOf="@id/checkbox_favorite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>