<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.devmasterteam.librum.ui.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_addBookFragment"
            app:destination="@id/addBookFragment" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_book_details"
            app:destination="@id/navigation_book_details" />
    </fragment>

    <fragment
        android:id="@+id/addBookFragment"
        android:name="com.devmasterteam.librum.ui.AddBookFragment"
        android:label="Adicionar Livro"
        tools:layout="@layout/fragment_add_book" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.devmasterteam.librum.ui.FavoriteFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/navigation_book_details"
        android:name="com.devmasterteam.librum.ui.DetailsFragment"
        android:label="@string/title_book_details"
        tools:layout="@layout/fragment_details" />

</navigation>